- NEW: Ignoring of multiple selected items by their extension. See
       issue #423 for details. (Stefan)
- NEW: The log dialog allows filtering by bug-ID. 
       See issue #422 for details. (Stefan)
- CHG: The bug-ID column width in the log dialog is now limited 
       to 200 pixels. (Stefan)
- CHG: The right-drag context menu now only shows "Export" if a versioned
       folder is dragged (for files, the windows 'copy' does the same). (Stefan)
- CHG: The right-drag context menu checks whether source and target are
       from the same repository and shows the "SVN move" and "SVN copy"
       commands only if they are. (Stefan)
- CHG: When only files are selected for "Add", the Add-dialog is not
       shown anymore but the files are added immediately. (Stefan)
- CHG: file:// access to BDB based repositories is no longer supported. (Stefan)
- CHG: the log dialog now shows a possible error message when fetching the
       log as a text in the top list control instead of showing a popup
       message box. (Stefan)

Version 1.5.3
- CHG: paths in error messages are nor truncated to 80 chars anymore. (Stefan)
- CHG: enabled rc4 encryption for the sasl dlls. (Stefan)
- BUG: some context menu entries were shown if multiple items were
       selected even if they only work on single items. (Stefan)
- BUG: the move/copy right-drag menus were not shown if the target
       folder was added but not yet committed. (Stefan)
- BUG: fixed missing typecasts. This lead among others to "show log" not
       working from the check-for-modifications dialog on x64. (Stefan)
- BUG: Reverting multiple selected paths only showed the files from the first
       selected path in the revert dialog. (Stefan)
- BUG: the right-drag context menu did not show all commands for old
       working copies (fresh checkout would fix this too). (Stefan)
- BUG: Starting external applications (e.g., the diff tool) could fail if